--- a/app/src/main/res/layout/weather_rv_item.xml
+++ b/app/src/main/res/layout/weather_rv_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="100dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="4dp"
-    app:cardElevation="6dp"
-    app:cardCornerRadius="10dp"
     android:background="@android:color/transparent"
-    android:layout_height="wrap_content">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="6dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,50 +15,50 @@
         android:background="@drawable/card_back">
 
         <TextView
+            android:id="@+id/idTVTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/idTVTime"
             android:gravity="center"
             android:padding="4dp"
             android:text="time"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            />
+            android:textColor="@color/white" />
+
         <TextView
+            android:id="@+id/idTVTemprature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/idTVTemprature"
+            android:layout_below="@id/idTVTime"
             android:gravity="center"
             android:padding="4dp"
             android:text="20"
-            android:textSize="20sp"
-            android:layout_below="@id/idTVTime"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            />
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
         <ImageView
+            android:id="@+id/idIVCondition"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_below="@id/idTVTemprature"
-            android:id="@+id/idIVCondition"
             android:layout_centerHorizontal="true"
             android:layout_margin="5dp"
             android:padding="4dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher" />
+
         <TextView
+            android:id="@+id/idWindSpeed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
             android:layout_below="@id/idIVCondition"
-            android:id="@+id/idWindSpeed"
-            android:textColor="@color/white"
-            android:text="13"
+            android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
-            android:padding="3dp"/>
+            android:gravity="center"
+            android:padding="3dp"
+            android:text="13"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
     </RelativeLayout>
-
 
 
 </androidx.cardview.widget.CardView>
